--- a/_data/config.json
+++ b/_data/config.json
@@ -1,10 +1,10 @@
 {
-    "title": "Stackbit Fresh Theme",
+    "title": "Jason Zheng",
     "layout_style": "overflow",
     "palette": "blue",
     "header": {
         "title": "Jason Zheng",
-        "tagline": "Software Engineer",
+        "tagline": "Computer Engineer",
         "profile_img": "images/avatar.png",
         "profile_img_alt": "Author avatar",
         "background": "dark",
@@ -72,20 +72,6 @@
                 "url": "https://twitter.com/jasonzheng22",
                 "style": "icon",
                 "icon_class": "twitter",
-                "new_window": true
-            },
-            {
-                "label": "Instagram",
-                "url": "https://www.instagram.com/jasonzheng22",
-                "style": "icon",
-                "icon_class": "instagram",
-                "new_window": true
-            },
-            {
-                "label": "DEV",
-                "url": "https://dev.to/",
-                "style": "icon",
-                "icon_class": "dev",
                 "new_window": true
             }
         ]
